@@ -18,8 +18,3 @@
 {
 }
 @end
-
-@interface Parallax2 : ParallaxDemo
-{
-}
-@end
